--- a/mall-product-a/src/main/resources/application.yml
+++ b/mall-product-a/src/main/resources/application.yml
@@ -3,3 +3,11 @@ application:
 
 server:
   port: 8085
+
+spring:
+  security:
+    user:
+      name: admin
+      password: admin
+      roles:
+        - User
