依赖问题修正代码提交

--- a/mall-product-b/src/main/resources/application.yml
+++ b/mall-product-b/src/main/resources/application.yml
@@ -3,3 +3,11 @@ application:
 
 server:
   port: 8086
+
+spring:
+  security:
+    user:
+      name: admin
+      password: admin
+      roles:
+        - User
