--- a/eureka-b/pom.xml
+++ b/eureka-b/pom.xml
@@ -13,6 +13,12 @@
     <name>eureka-b</name>
 
     <dependencies>
+        <!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+        -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
