注册中心配置代码提交

--- a/eureka-a/src/main/resources/application.yml
+++ b/eureka-a/src/main/resources/application.yml
@@ -1,9 +1,10 @@
-application:
-  name: eureka-a
-
 eureka:
   instance:
     hostname: localhost
 
 server:
   port: 8080
+
+spring:
+  application:
+    name: eureka-a
