--- a/mall-product-a/src/main/resources/application.yml
+++ b/mall-product-a/src/main/resources/application.yml
@@ -1,10 +1,14 @@
-application:
-  name: mall-product-a
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8080/eureka
 
 server:
   port: 8085
 
 spring:
+  application:
+    name: mall-product
   security:
     user:
       name: admin
