--- a/mall-product-b/src/main/resources/application.yml
+++ b/mall-product-b/src/main/resources/application.yml
@@ -2,6 +2,17 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8080/eureka
+  instance:
+    prefer-ip-address: true
+
+info:
+  app:
+    name: mall-product-a
+  company:
+    name: avence.club
+  build:
+    artifact-id: $project.artifactId$
+    model-version: $project.modelVersion$
 
 server:
   port: 8086
