--- a/eureka-b/src/main/resources/application.yml
+++ b/eureka-b/src/main/resources/application.yml
@@ -1,10 +1,19 @@
 eureka:
+  client:
+    fetch-registry: false
+    register-with-eureka: false
   instance:
     hostname: localhost
-
+  server:
+    eviction-interval-timer-in-ms: 1000
+    enable-self-preservation: false
 server:
   port: 8082
 
 spring:
   application:
     name: eureka-b
+  security:
+    user:
+      name: admin
+      password: admin
