--- a/mall-product-b/src/main/resources/application.yml
+++ b/mall-product-b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8080/eureka
+      defaultZone: http://admin:admin@localhost:8080/eureka
   instance:
+    lease-expiration-duration-in-seconds: 5
+    lease-renewal-interval-in-seconds: 2
     prefer-ip-address: true
 
 info:
