--- a/eureka-b/src/main/resources/application.yml
+++ b/eureka-b/src/main/resources/application.yml
@@ -2,8 +2,10 @@ eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
+    service-url:
+      defaultZone: http://admin:admin@eureka-a:8080/eureka
   instance:
-    hostname: localhost
+    hostname: eureka-b
   server:
     eviction-interval-timer-in-ms: 1000
     enable-self-preservation: false
