--- a/mall-product-b/src/main/resources/application.yml
+++ b/mall-product-b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:admin@localhost:8080/eureka
+      defaultZone: http://admin:admin@eureka-a:8080/eureka, http://admin:admin@eureka-b:8082/eureka
   instance:
     lease-expiration-duration-in-seconds: 5
     lease-renewal-interval-in-seconds: 2
