--- a/mall-web-a/src/main/resources/application.yml
+++ b/mall-web-a/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+eureka:
+  client:
+    register-with-eureka: false
+    service-url:
+      defaultZone: http://admin:admin@eureka-a:8080/eureka, http://admin:admin@eureka-b:8082/eureka
+
 server:
   port: 8090
 
