Ribbon配置代码提交

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>mall-product-b</module>
         <module>mall-web-a</module>
         <module>mall-web-b</module>
+        <module>mall-web-ribbon</module>
     </modules>
 
     <name>spring-cloud</name>
