--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     <modules>
         <module>eureka-a</module>
         <module>eureka-b</module>
-        <module>mall-support</module>
         <module>mall-product-a</module>
         <module>mall-product-b</module>
+        <module>mall-support</module>
         <module>mall-web-a</module>
         <module>mall-web-b</module>
+        <module>mall-web-feign</module>
         <module>mall-web-ribbon</module>
     </modules>
 
