--- a/mall-product-a/pom.xml
+++ b/mall-product-a/pom.xml
@@ -8,9 +8,8 @@
         <groupId>club.avence.springcloud</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>mall-product-a</artifactId>
-
     <name>mall-product-a</name>
+    <artifactId>mall-product-a</artifactId>
 
     <dependencies>
         <dependency>
@@ -32,6 +31,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
 
