Hystrix熔断代码上传

--- a/mall-web-feign/src/main/resources/application.yml
+++ b/mall-web-feign/src/main/resources/application.yml
@@ -13,6 +13,8 @@ feign:
         - application/xml
         - application/json
       min-request-size: 0
+  hystrix:
+    enabled: true
 
 logging:
   level:
