Hystrix控制面板代码上传

--- a/mall-product-a/src/main/resources/application.yml
+++ b/mall-product-a/src/main/resources/application.yml
@@ -16,6 +16,12 @@ info:
     artifact-id: $project.artifactId$
     model-version: $project.modelVersion$
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
 server:
   port: 8085
 
