--- a/mall-user-a/pom.xml
+++ b/mall-user-a/pom.xml
@@ -3,17 +3,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>spring-cloud</artifactId>
         <groupId>club.avence.springcloud</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>mall-security</artifactId>
-
-    <name>mall-security</name>
+    <name>mall-user-a</name>
+    <artifactId>mall-user-a</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>club.avence.springcloud</groupId>
+            <artifactId>mall-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -22,5 +28,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
+
 </project>
