--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -9,8 +9,8 @@
         <artifactId>spring-cloud</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <name>turbine</name>
-    <artifactId>turbine</artifactId>
+    <name>zuul</name>
+    <artifactId>zuul</artifactId>
 
     <dependencies>
         <dependency>
@@ -19,16 +19,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    
 </project>
