--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -5,12 +5,8 @@ eureka:
       defaultZone: http://admin:admin@eureka-a:8080/eureka, http://admin:admin@eureka-b:8082/eureka
 
 server:
-  port: 8078
+  port: 8077
 
 spring:
   application:
-    name: turbine
-
-turbine:
-  app-config: MALL-PRODUCT, MALL-USER
-  cluster-name-expression: new String('default')
+    name: zuul
