--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>mall-product-b</module>
         <module>mall-security</module>
         <module>mall-support</module>
+        <module>mall-user-a</module>
         <module>mall-web-a</module>
         <module>mall-web-b</module>
         <module>mall-web-feign</module>
