--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
+        <module>config-center-client</module>
+        <module>config-server</module>
         <module>eureka-a</module>
         <module>eureka-b</module>
         <module>hystrix</module>
