--- a/eureka-a/pom.xml
+++ b/eureka-a/pom.xml
@@ -9,9 +9,8 @@
         <artifactId>spring-cloud</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>eureka-a</artifactId>
-
     <name>eureka-a</name>
+    <artifactId>eureka-a</artifactId>
 
     <dependencies>
         <dependency>
@@ -21,6 +20,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
