--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>config-center-client</module>
         <module>config-server</module>
+        <module>config-server-eureka-a</module>
+        <module>config-server-eureka-b</module>
         <module>eureka-a</module>
         <module>eureka-b</module>
         <module>hystrix</module>
