--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+eureka:
+  client:
+    service-url:
+      defaultZone: http://admin:admin@eureka-a:8083/eureka, http://admin:admin@eureka-b:8084/eureka
+
 server:
   port: 8076
 
