--- a/config-server-eureka-a/src/main/resources/application.yml
+++ b/config-server-eureka-a/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
       defaultZone: http://admin:admin@eureka-b:8084/eureka
   instance:
@@ -15,7 +15,7 @@ server:
 
 spring:
   application:
-    name: config-server-eureka-a
+    name: config-server-eureka
   security:
     user:
       name: admin
