--- a/config-server-eureka-b/src/main/resources/application.yml
+++ b/config-server-eureka-b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ eureka:
       defaultZone: http://admin:admin@eureka-a:8083/eureka
   instance:
     hostname: eureka-b
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    prefer-ip-address: true
   server:
     eviction-interval-timer-in-ms: 1000
     enable-self-preservation: false
