--- a/config-center-client/src/main/resources/bootstrap.yml
+++ b/config-center-client/src/main/resources/bootstrap.yml
@@ -1,8 +1,15 @@
+eureka:
+  client:
+    service-url:
+      defaultZone: http://admin:admin@eureka-a:8083/eureka, http://admin:admin@eureka-b:8084/eureka
+
 spring:
   cloud:
     config:
       name: config-center-client
+      discovery:
+        enabled: true
+        service-id: CONFIG-SERVER
       label: master
-      uri: http://localhost:8076
       username: admin
       password: admin
