--- a/config-server-eureka-a/src/main/resources/application.yml
+++ b/config-server-eureka-a/src/main/resources/application.yml
@@ -6,11 +6,11 @@ eureka:
       defaultZone: http://admin:admin@eureka-b:8084/eureka
   instance:
     hostname: eureka-a
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-    prefer-ip-address: true
+    instance-id: ${eureka.instance.hostname}:${server.port}
+    lease-expiration-duration-in-seconds: 5
+    lease-renewal-interval-in-seconds: 2
   server:
     eviction-interval-timer-in-ms: 1000
-    enable-self-preservation: false
 
 server:
   port: 8083
