--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
+        <module>bus</module>
         <module>config-center-client</module>
         <module>config-server</module>
         <module>config-server-eureka-a</module>
