--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>bus</module>
+        <module>bus-client</module>
         <module>config-center-client</module>
         <module>config-server</module>
         <module>config-server-eureka-a</module>
