--- a/mall-web-b/src/main/resources/application.yml
+++ b/mall-web-b/src/main/resources/application.yml
@@ -10,3 +10,10 @@ server:
 spring:
   application:
     name: mall-web-b
+  zipkin:
+    base-url: http://localhost:8071
+    sender:
+      type: rabbit
+    sleuth:
+      sampler:
+        probability: 1.0
