--- a/mall-user-a/src/main/resources/application.yml
+++ b/mall-user-a/src/main/resources/application.yml
@@ -28,4 +28,11 @@ server:
 spring:
   application:
     name: mall-user
+  zipkin:
+    base-url: http://localhost:8071
+    sender:
+      type: rabbit
+    sleuth:
+      sampler:
+        probability: 1.0
     
