--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -16,6 +16,13 @@ spring:
       password: admin
       roles:
         - User
+  zipkin:
+    base-url: http://localhost:8071
+    sender:
+      type: rabbit
+    sleuth:
+      sampler:
+        probability: 1.0
 
 zuul:
   ignored-services: "*"
