--- a/mall-product-a/src/main/resources/application.yml
+++ b/mall-product-a/src/main/resources/application.yml
@@ -28,16 +28,21 @@ server:
 spring:
   application:
     name: mall-product
+  rabbitmq:
+    addresses: 172.17.0.2:5672
+    username: admin
+    password: admin
   security:
     user:
       name: admin
       password: admin
       roles:
         - User
+  sleuth:
+    sampler:
+      probability: 1.0
   zipkin:
     base-url: http://localhost:8071
     sender:
       type: rabbit
-    sleuth:
-      sampler:
-        probability: 1.0
+
