--- a/mall-web-a/src/main/resources/application.yml
+++ b/mall-web-a/src/main/resources/application.yml
@@ -10,10 +10,15 @@ server:
 spring:
   application:
     name: mall-web-a
+  rabbitmq:
+    addresses: 172.17.0.2:5672
+    username: admin
+    password: admin
+  sleuth:
+    sampler:
+      probability: 1.0
   zipkin:
     base-url: http://localhost:8071
     sender:
       type: rabbit
-    sleuth:
-      sampler:
-        probability: 1.0
+
