--- a/eureka-b/src/main/resources/application.yml
+++ b/eureka-b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
       defaultZone: http://admin:admin@eureka-b:8080/eureka
   instance:
