--- a/eureka-a/src/main/resources/application.yml
+++ b/eureka-a/src/main/resources/application.yml
@@ -6,6 +6,7 @@ eureka:
       defaultZone: http://admin:admin@eureka-b:8082/eureka
   instance:
     hostname: eureka-a
+    instance-id: ${eureka.instance.hostname}:${server.port}
   server:
     eviction-interval-timer-in-ms: 1000
     enable-self-preservation: false
@@ -15,7 +16,7 @@ server:
 
 spring:
   application:
-    name: eureka-a
+    name: eureka
   security:
     user:
       name: admin
