--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>config-server-eureka-b</module>
         <module>eureka-a</module>
         <module>eureka-b</module>
+        <module>gateway</module>
         <module>hystrix</module>
         <module>mall-product-a</module>
         <module>mall-product-b</module>
@@ -43,6 +44,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sentinel.version>1.6.3</sentinel.version>
         <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
     </properties>
@@ -83,6 +85,11 @@
                 <groupId>club.avence.springcloud</groupId>
                 <artifactId>mall-support</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.csp</groupId>
+                <artifactId>sentinel-core</artifactId>
+                <version>${sentinel.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
