加入sentinel限流功能

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -25,6 +25,16 @@ spring:
           filters:
           - RewritePath='/' + serviceId + '/(?<remaining>.*)', "/${remaining}"
           - AddRequestHeader="Authorization", "Basic YWRtaW46YWRtaW4="
+    sentinel:
+      datasource:
+        ds:
+          nacos:
+            data-id: ${spring.application.name}-sentinel
+            group-id: DEFAULT_GROUP
+            rule-type: flow
+            server-addr: localhost:8848
+    transport:
+      dashboard: http://localhost:8070
   rabbitmq:
     addresses: 172.17.0.2:5672
     username: admin
