--- a/eureka-a/src/main/resources/application.yml
+++ b/eureka-a/src/main/resources/application.yml
@@ -6,10 +6,9 @@ eureka:
       defaultZone: http://admin:admin@eureka-b:8082/eureka
   instance:
     hostname: eureka-a
-    instance-id: ${eureka.instance.hostname}:${server.port}
   server:
     eviction-interval-timer-in-ms: 1000
-    enable-self-preservation: false
+    enable-self-preservation: true
 
 server:
   port: 8080
