--- a/mall-product-a/src/main/resources/application.yml
+++ b/mall-product-a/src/main/resources/application.yml
@@ -22,6 +22,11 @@ management:
       exposure:
         include: '*'
 
+security:
+  oauth2:
+    resource:
+      token-info-uri: http://localhost:8074/oauth/check_token
+
 server:
   port: 8085
   servlet:
@@ -30,20 +35,3 @@ server:
 spring:
   application:
     name: mall-product
-  rabbitmq:
-    addresses: 172.17.0.2:5672
-    username: admin
-    password: admin
-  security:
-    user:
-      name: admin
-      password: admin
-      roles:
-        - User
-  sleuth:
-    sampler:
-      probability: 1.0
-  zipkin:
-    base-url: http://localhost:8071
-    sender:
-      type: rabbit
